# MUD-06-DDI-nn

./: .envrc  .gitignore  codemaps.py  dataset.py  devel.out  devel.stats  flake.nix  model.idx  nltk_data.nix  parse_data.py  plot_model.py  predict.py  pyproject.toml  requirements.txt  run.sh  stanford-corenlp.nix  train.py  transformer.py
model/: keras_metadata.pb  saved_model.pb
model/variables/: variables.index
util/: corenlp-server.sh  ddi2gold.py  deptree.py  evaluator.py  ner2gold.py
